--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==24.2.0
 certifi==2024.8.30
 dj-database-url==0.5.0
 Django==4.2.20
+django-allauth==65.8.0
 greenlet==3.2.1
 gunicorn==20.1.0
 h11==0.14.0
