--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
+crispy-bootstrap5==2025.4
 dj-database-url==2.3.0
 Django==5.2.1
 django-allauth==65.8.0
+django-crispy-forms==2.4
+django-extensions==4.1
 gunicorn==23.0.0
 packaging==25.0
 psycopg2-binary==2.9.10
