--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==4.2.20
 django-allauth==65.8.0
 django-crispy-forms==2.4
 django-extensions==4.1
+django-widget-tweaks==1.5.0
 greenlet==3.2.1
 gunicorn==20.1.0
 h11==0.14.0
