--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,23 @@
 asgiref==3.8.1
-attrs==24.2.0
-certifi==2024.8.30
+certifi==2025.4.26
 charset-normalizer==3.4.2
 cloudinary==1.36.0
 crispy-bootstrap5==2025.4
-dj-database-url==0.5.0
+dj-database-url==2.3.0
 dj3-cloudinary-storage==0.0.6
-Django==4.2.20
+Django==5.2.1
 django-allauth==65.8.0
-django-ckeditor==6.7.2
 django-crispy-forms==2.4
 django-extensions==4.1
-django-js-asset==3.1.2
 django-widget-tweaks==1.5.0
-greenlet==3.2.1
-gunicorn==20.1.0
-h11==0.14.0
-idna==3.8
-outcome==1.3.0.post0
+gunicorn==23.0.0
+idna==3.10
+packaging==25.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
-PySocks==1.7.1
 requests==2.32.3
-selenium==4.24.0
-setuptools==80.3.1
 six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.40
 sqlparse==0.5.3
-trio==0.26.2
-trio-websocket==0.11.1
-typing_extensions==4.12.2
+typing_extensions==4.13.2
 urllib3==1.26.20
-websocket-client==1.8.0
 whitenoise==6.5.0
-wsproto==1.2.0
